--- a/meson_options.txt
+++ b/meson_options.txt
@@ -4,15 +4,15 @@ option('install-app', type: 'boolean', value: true)
 option('use_gym', type: 'boolean', value: false)
 option('enable-capi', type: 'feature', value: 'auto')
 option('enable-ccapi', type: 'boolean', value: true)
-option('enable-test', type: 'boolean', value: true)
+option('enable-test', type: 'boolean', value: false)
 option('enable-logging', type: 'boolean', value: true)
 option('enable-tizen-feature-check', type: 'boolean', value: true)
 option('enable-nnstreamer-backbone', type: 'boolean', value: false)
-option('enable-tflite-backbone', type: 'boolean', value: true)
+option('enable-tflite-backbone', type: 'boolean', value: false)
 option('enable-profile', type: 'boolean', value: false)
 option('enable-trace', type: 'boolean', value: false)
 option('enable-debug', type: 'boolean', value: false)
-option('enable-tflite-interpreter', type: 'boolean', value: true)
+option('enable-tflite-interpreter', type: 'boolean', value: false)
 option('enable-onnx-interpreter', type: 'boolean', value: false)
 option('enable-fsu', type: 'boolean', value: false)
 option('fsu-path', type: 'string', value: '')
