[XLMRoberta] Imlement embedding layers and utility functions
- Add utility functions for creating position_ids from input_ids
- Refactor Position and TokenType layers to use the new utility function
- Add addition layers for combining

--- a/Applications/XLMRoberta/meson.build
+++ b/Applications/XLMRoberta/meson.build
@@ -4,6 +4,7 @@ executable_src = [
     meson.current_source_dir() / 'xlm_roberta.cpp',
     meson.current_source_dir() / 'position.cpp',
     meson.current_source_dir() / 'token_type.cpp',
+    meson.current_source_dir() / 'util.cpp',
 ]
 
 # Include directories
